--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -9,7 +9,11 @@
 
 {% block content %}
 
-    Hello!
+    <form method="POST" action="{% url "users:login" %}">
+        {% csrf_token %}
+        {{form.as_p}} 
+        <button>Login</button>       
+    </form>
 
 
 {% endblock content %}
